# top-server-rewrite

./: Cargo.toml  config.yaml
.github/workflows/: rust-clippy.yml
common_utils/: Cargo.toml
common_utils/src/: lib.rs
common_utils/src/logger/: mod.rs
common_utils/src/network/: connection_handler.rs  mod.rs  rpc.rs  tcp_client.rs  tcp_connection.rs  tcp_server.rs
common_utils/src/packet/: auth.rs  commands.rs  heartbeat.rs  init.rs  mod.rs  packets.rs
common_utils/src/packet/parser/: de.rs  error.rs  mod.rs  ser.rs
common_utils/src/parser/: config_parser.rs  mod.rs
common_utils/src/tcp/: connection.rs
common_utils/tests/: invalid_yaml.yml  valid_yaml.yml
gate_server/: Cargo.toml  config.yaml
gate_server/src/: client_handler.rs  config.rs  gameserver.rs  gameserver_handler.rs  gate_commands.rs  gate_server.rs  group_server.rs  groupserver_handler.rs  main.rs  metrics.rs  player.rs  web_server.rs
gate_server/src/entities/: player.rs
gate_server/src/handlers/: client.rs
gate_server/src/packets/: gameserver.rs  mod.rs
gate_server/tests/: test_gate_config.yaml
