[package]
name = "common_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
serde_yaml = "0.9.13"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.0.1" }
num_enum = { version = "0.5.7" }
byteorder = { version = "1.4.3" }
bincode = { version = "1.3.3" }
hex = { version = "0.4.3" }
num = { version = "0.4.0" }
derive_more = { version = "0.99.17" }
tokio = { version = "1.9.0" }
tokio-util = { version = "0.7.10" }
chrono = { version = "0.4.33" }
nanoid = { version = "0.4.0" }
colored = { version = "2.0.0" }
log = { version = "0.4" }
