[package]
name = "gate_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_utils = { path = "../common_utils" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
colored = { version = "2.0.0" }
anyhow = { version = "1.0.65" }
prometheus = { version = "0.13.3" }
lazy_static = { version = "1.4.0" }
rouille = { version = "3.6.1" }
chrono = { version = "0.4.33" }
nanoid = { version = "0.4.0" }
